--- a/404.amp.html
+++ b/404.amp.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script async src="https://cdn.ampproject.org/v0.js"></script>
 	<title>Lev</title>
+	<link rel="shortcut icon" href="favicon.png">
 	<style amp-custom>
 		*,
 		::after,
@@ -3006,6 +3007,41 @@
 		.content-promo-block a {
 			color: #32a2f4;
 		}
+
+		/* reviews */
+		.reviews {
+			margin-bottom: 30px;
+		}
+
+		.reviews__item {}
+
+		.reviews__item:not(:last-child) {
+			margin-bottom: 20px;
+
+		}
+
+		.reviews__label {
+			background-color: #015b93;
+			font-weight: 600;
+			padding: 18px;
+			width: 100%;
+			color: #fff;
+			border-radius: 6px;
+			font-size: 18px;
+		}
+
+		.reviews__body {
+			border-radius: 6px;
+			background-image: linear-gradient(#353d4c82, #353d4cfa);
+			color: #96a3ba;
+			padding: 15px;
+		}
+
+		.reviews__body p {
+			margin-bottom: 0;
+		}
+
+		/* reviews */
 	</style>
 	<style amp-boilerplate>
 		body {
