--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
 	<script src="content/js/jquery.min.js"></script>
 	<script src="content/js/jquery-migrate.min.js"></script>
 	<link href="content/css/style.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.png">
 </head>
 
 <body data-rsssl=1 class="error404 wp-embed-responsive custom-background sidebar-right">
