--- a/index.amp.html
+++ b/index.amp.html
@@ -3041,6 +3041,51 @@
 		}
 
 		/* reviews */
+
+		/* menu on mob */
+		.mobile-menu-placeholder.open {
+			margin-top: -30px;
+			position: relative;
+			z-index: 2;
+		}
+
+		.main-navigation-inner {
+			padding-left: 20px;
+			padding-right: 20px;
+			background-color: #121526;
+		}
+
+		.main-navigation ul {
+			padding: 0;
+			margin: 0;
+			list-style: none;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-ms-flex-wrap: wrap;
+			flex-wrap: wrap;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			-ms-flex-direction: column;
+			flex-direction: column;
+		}
+
+		.main-navigation ul li {
+			position: relative;
+			display: block;
+			padding: 20px 20px;
+			text-decoration: none;
+			font-weight: 700;
+			z-index: 1;
+			color: #fff;
+		}
+
+		.main-navigation ul li a {
+			text-decoration: none;
+			color: #fff;
+		}
+
+		/* menu on mob */
 	</style>
 	<style amp-boilerplate>
 		body {
